@@ -1,4 +1,5 @@
-* Added muninn-summary to display aggregate statistics.
+* Added muninn-summary to display aggregate statistics. Removed 
+  `muninn-search -s` as it became redundant.
 
 4.2 2018-06-12
 ~~~~~~~~~~~~~~
